# coco-serverless

./: .gitattributes  .gitignore  .gitmodules  README.md  bon  configuration-qemu-sev.toml  containerd-shim-kata-qemu-v2  containerd-shim-kata-v2  oca.cert  oca.key  requirements.txt  setup.cfg
.config/: kubeadm.conf
apps/knative-chaining/: Cargo.toml  Dockerfile  chaining.yaml  curl_cmd.sh
apps/knative-chaining/src/: main.rs
conf-files/: 10-containerd-net.conflist  k8s_registry.yaml  kernel_config_KVM_AMD_SEV  kernel_config_guest_KVM_AMD_SEV  knative_autoscaler_patch.yaml  knative_config.yaml  knative_controller_custom_certs.yaml.j2  knative_replace_sidecar.yaml.j2  kubeadm.conf  kubelet.service  kubelet_service.conf  metallb_config.yaml  mkosi.conf  mkosi.kernel.config  ocicrypt.conf  openssl.cnf  qemu-snp-sc2_runtimeclass.yaml  qemu-tdx-sc2_runtimeclass.yaml
docker/: base.dockerfile  containerd.dockerfile  guest_components.dockerfile  kata.dockerfile  nydus-snapshotter.dockerfile  nydus.dockerfile  nydus_snapshotter.dockerfile  ovmf.dockerfile  qemu.dockerfile  registry.dockerfile  skopeo.dockerfile
docs/: attestation.md  coconut.md  coconut_svsm.md  cvm_cache.md  cvm_rollback.md  guest_components.md  helloworld_knative.md  helloworld_knative_attestation.md  helloworld_py.md  host_kernel.md  k8s.md  kata.md  kbs.md  knative.md  knative_chaining.md  knattive_chaining.md  ovmd.md  ovmf.md  registry.md  sev.md  troubleshooting.md  uk8s.md  upgrade_coco.md
eval/: README.md
output/: oci_config.json  oci_manifest.json
patches/: ovmf_overhead_wip.patch  (+1 more)
(+494 files in other folders)
